# opensn

./: .buildinfo  .clang-tidy  .gitignore  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  classes.html  dir_06da43a2cb31133f75ed07f18b94e985.html  dir_06da43a2cb31133f75ed07f18b94e985.js  dir_07ea5044f667393972989452db362fa0.html  dir_07ea5044f667393972989452db362fa0.js  dir_07eddb7a518fbdf8e44d4a06048fa9e9.html  dir_07eddb7a518fbdf8e44d4a06048fa9e9.js  dir_08a481a8f2bb0a502e0ffeb5381fa752.html  dir_08a481a8f2bb0a502e0ffeb5381fa752.js  dir_08e9b4943cd0189cfe2fae20c8e1ef07.html  dir_08e9b4943cd0189cfe2fae20c8e1ef07.js  dir_118c31fa8f614d61ca8ba0850500d19d.html  dir_118c31fa8f614d61ca8ba0850500d19d.js  dir_1289830af461c6b38eb0025d03fbcb11.html  dir_1289830af461c6b38eb0025d03fbcb11.js  dir_16235fa84f2bbc46b5d89bf30cf11d56.html  dir_16235fa84f2bbc46b5d89bf30cf11d56.js  dir_1906b37d67c597c63c99de16bf300b59.html  dir_1906b37d67c597c63c99de16bf300b59.js  dir_1d74e0b7ea6543f7c2f9ab5f5907b612.html  dir_1d74e0b7ea6543f7c2f9ab5f5907b612.js  dir_1eac878a1d98c8d5ddd750cf66b6e542.html  dir_1eac878a1d98c8d5ddd750cf66b6e542.js  dir_22027c6830ec8d27ec7eadc1020d13b8.html  dir_22027c6830ec8d27ec7eadc1020d13b8.js  dir_22f139fcddfdce17e8b2a5dc710f9fcc.html  dir_22f139fcddfdce17e8b2a5dc710f9fcc.js  dir_23205ff942bffeebdd86167fe3ae3e89.html  dir_23205ff942bffeebdd86167fe3ae3e89.js  dir_23df29fa212a9a4436a10cf4354a63e7.html  dir_23df29fa212a9a4436a10cf4354a63e7.js  dir_26dfc27a9091949e011dfdc709c82f79.html  dir_26dfc27a9091949e011dfdc709c82f79.js  (+381 more)
lua/: CMakeLists.txt  main.cc
lua-ng/: CMakeLists.txt  console.cc  console.h  framework.cc  framework.h  lua_app.cc  lua_app.h  main.cc  module.cc  module.h
lua/base/: console.cc  console.h  console_app.cc  console_app.h  lua.cc  lua_make_object.cc  lua_parse_table.cc
lua/framework/: aquad.cc  enum.h  fieldfunc.cc  init.cc  init.h  lbs.cc  logger.cc  lua_app.cc  lua_make_object.cc  mat.cc  mesh.cc  opensn.cc  parse_table.cc  post.cc  runtime.cc  runtime.h  solver.cc  solver.h  test_obj.h  types.h  xs.cc  xs.h
lua/framework/console/: console.cc  console.h
lua/framework/interfaces/: plugin.cc  plugin.h
lua/framework/logging/: log.cc  log_lua.h
lua/framework/math/functions/: function_lua_dimA_to_dimB.cc  function_lua_dimA_to_dimB.h  lua_math_function.cc  lua_response_function.cc  lua_response_function.h  lua_scalar_material_function.cc  lua_scalar_spatial_function.cc  lua_scalar_spatial_material_function.cc  lua_vector_spatial_function.cc  lua_vector_spatial_material_function.cc
lua/framework/math/quadratures/: angular_quadrature_polar_opt.cc  create_angular_quadrature.cc  create_curvilinear_product_quadrature.cc  create_line_quadrature.cc  create_prod_quadrature.cc  get_prod_quadrature.cc
lua/framework/mesh/: lua_mesh.cc  lua_mesh.h
lua/framework/mesh/field_function_interpolation/: ffinterpol_create.cc  ffinterpol_export.cc  ffinterpol_get_value.cc  ffinterpol_lua.h  (+2 more)
lua/framework/mpi/: mpi_barrier.cc  mpi_lua.h
lua/framework/physics/: physics_add_material.cc  physics_lua_utils.h  physics_material_properties.cc
lua/framework/post_processors/: lua_execute_post_processors.cc  lua_post_processor_get_value.cc  lua_pp_printer_set_options.cc  lua_print_post_processors.cc
lua/framework/utils/: lua_exit.cc  lua_program_timer.cc  lua_sleep.cc
lua/lib/: console.cc  console.h  lbs.cc  lua_app.cc  lua_app.h  opensn.cc  parse_table.cc
lua/modules/: modules_lua.cc  modules_lua.h
lua/modules/cfem_diffusion/: create_solver.cc  ds_lua_utils.h  lua_cfem_diff_solver.cc  set_bc_property.cc
lua/modules/dfem_diffusion/: create_solver.cc  ip_lua_utils.h  lua_dfem_diff_solver.cc  set_bc_property.cc
lua/modules/diffusion_solver/: diffusion_create_solver.cc  diffusion_execute.cc  diffusion_initialize.cc  diffusion_lua.h  diffusion_setproperty.cc
lua/modules/fv_diffusion/: create_solver.cc  ds_lua_utils.h  lua_fv_diff_solver.cc  set_bc_property.cc
lua/modules/mg_diffusion/: create_solver.cc  lua_mg_diff_solver.cc  mgds_lua_utils.h  set_bc_property.cc
lua/modules/point_reactor_kinetics/: prk_lua_utils.cc  prk_lua_utils.h
test/: CMakeLists.txt
test/example/: example_test.cc
test/extra/: 2Dtransport_simulation_part.lua  3Dtransport_simulation_part.lua  read_2D_extruded.lua  read_2D_obj_mesh_KBA.lua  read_2D_obj_mesh_Parmetis.lua  read_3D_ortho_KBA.lua  read_3D_vtu_Parmetis.lua  tests.json
test/framework/data_types/: data_types_test_00.cc
test/framework/graphs/: kba_graph_partitioner.cc
test/framework/log/: timing_block_test.cc
test/framework/math/: math_test_00.cc  math_test_01_wdd_ijk_sweep.cc  math_test_02.cc  tests.json
test/framework/mesh/: read_wavefront_obj1.lua
test/framework/misc_utils/: misc_utils_test_00.cc
test/framework/parameters/: params_test_00.cc  params_test_01.cc  params_test_01.h  tests.json
test/framework/tutorials/: fv_test1.cc  fv_test2.cc  pwlc_test1.cc  pwlc_test2.cc  tests.json  tutorial_06_wdd.cc  tutorial_91a_pwld.cc  tutorial_93_raytracing.cc  tutorial_93_raytracing.lua
test/lua/function_wrapper/: function_wrapper.cc
test/modules/cfem_diffusion/: c_diffusion_2d_1a_linear.lua  c_diffusion_2d_2a_dir_bcs.lua  c_diffusion_2d_2b_robin_bcs.lua  c_diffusion_2d_3a_analytical_coef.lua  c_diffusion_2d_3b_analytical_coef2.lua
test/modules/dfem_diffusion/: d_diffusion_2d_1a_linear.lua  d_diffusion_2d_2a_dir_bcs.lua  d_diffusion_2d_2b_robin_bcs.lua  d_diffusion_2d_3a_analytical_coef.lua  d_diffusion_2d_3b_analytical_coef2.lua  d_diffusion_2d_3c_l2_error_mms.lua
test/modules/diffusion/: diffusion_2d_1_poly_ip.lua
test/modules/mg_diffusion/: mg_diffusion_1d_1a_linear.lua  mg_diffusion_2d_1a_linear.lua
test/src/: main.cc  test_slot.py
test/unit_tests/: CMakeLists.txt  byte_array_test.cc  dynamic_matrix_test.cc  dynamic_vector_test.cc  ghosted_parallel_stl_vector_test.cc  input_parameters_test.cc  kba_graph_partitioner_test.cc  main.cc  nd_array_test.cc  parallel_stl_vector_test.cc  parameter_block_test.cc  sparse_matrix_test.cc  timing_block_test.cc  utils_test.cc  varying_test.cc
(+3867 files in other folders)
